; ModuleID = '/home/carl/AnghaBench/tmux/extr_mode-tree.c_mode_tree_count_tagged.c'
source_filename = "/home/carl/AnghaBench/tmux/extr_mode-tree.c_mode_tree_count_tagged.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mode_tree_data = type { i64, %struct.TYPE_2__* }
%struct.TYPE_2__ = type { %struct.mode_tree_item* }
%struct.mode_tree_item = type { i64 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @mode_tree_count_tagged(%struct.mode_tree_data* %0) #0 {
  %2 = alloca %struct.mode_tree_data*, align 8
  %3 = alloca %struct.mode_tree_item*, align 8
  %4 = alloca i64, align 8
  %5 = alloca i64, align 8
  store %struct.mode_tree_data* %0, %struct.mode_tree_data** %2, align 8
  store i64 0, i64* %5, align 8
  store i64 0, i64* %4, align 8
  br label %6

6:                                                ; preds = %28, %1
  %7 = load i64, i64* %4, align 8
  %8 = load %struct.mode_tree_data*, %struct.mode_tree_data** %2, align 8
  %9 = getelementptr inbounds %struct.mode_tree_data, %struct.mode_tree_data* %8, i32 0, i32 0
  %10 = load i64, i64* %9, align 8
  %11 = icmp ult i64 %7, %10
  br i1 %11, label %12, label %31

12:                                               ; preds = %6
  %13 = load %struct.mode_tree_data*, %struct.mode_tree_data** %2, align 8
  %14 = getelementptr inbounds %struct.mode_tree_data, %struct.mode_tree_data* %13, i32 0, i32 1
  %15 = load %struct.TYPE_2__*, %struct.TYPE_2__** %14, align 8
  %16 = load i64, i64* %4, align 8
  %17 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %15, i64 %16
  %18 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %17, i32 0, i32 0
  %19 = load %struct.mode_tree_item*, %struct.mode_tree_item** %18, align 8
  store %struct.mode_tree_item* %19, %struct.mode_tree_item** %3, align 8
  %20 = load %struct.mode_tree_item*, %struct.mode_tree_item** %3, align 8
  %21 = getelementptr inbounds %struct.mode_tree_item, %struct.mode_tree_item* %20, i32 0, i32 0
  %22 = load i64, i64* %21, align 8
  %23 = icmp ne i64 %22, 0
  br i1 %23, label %24, label %27

24:                                               ; preds = %12
  %25 = load i64, i64* %5, align 8
  %26 = add i64 %25, 1
  store i64 %26, i64* %5, align 8
  br label %27

27:                                               ; preds = %24, %12
  br label %28

28:                                               ; preds = %27
  %29 = load i64, i64* %4, align 8
  %30 = add i64 %29, 1
  store i64 %30, i64* %4, align 8
  br label %6

31:                                               ; preds = %6
  %32 = load i64, i64* %5, align 8
  ret i64 %32
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
